# ai-voice-stack

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONFIG_HELP.md  LICENSE  Makefile  PROMPT.md  README.md  TOOLS.md  Taskfile.yml  config.py  docker-compose.cuda.yml  docker-compose.yml  pe_check.py  pipeline.py  pyproject.toml  rebuild_llama.py  requirements.txt  requirments.txt  setup.sh  test.cpp
.github/workflows/: build-arm64.yml  smoke.yml  unit.yml
docker/llm/: Dockerfile.cpu  Dockerfile.cuda
docker/main/: Dockerfile  requirements.txt
docker/stt/: Dockerfile
docker/tts/: Dockerfile  requirements.txt
installer/: __init__.py  __main__.py  build_llama.py  detect.py  models.py  runtime_libs.py  serve.py  setup_stt.py  setup_torch.py  tools.py  util.py
llm/: Dockerfile  README.md  requirements.txt
llm/app/: server.py  tools.py
models/: Qwen2.5-3B-Instruct-Q4_K_M.gguf
modules/client/: llm_client.py  oww_client.py  stt_client.py  tts_client.py
modules/server/: llm_server.py  stt_server.py  tts_server.py
modules/tools/: __init__.py  datetime_tools.py  math_tools.py  memory_tools.py  random_tools.py  registry.py
modules/utility/: aec.py  earcon.py  latency.py  memory.py  tool_registry.py
orchestrator/: Dockerfile  entrypoint.sh  requirements.txt
orchestrator/app/: __init__.py  config.py  main.py  pipeline.py  tool_registry.py
simulstreaming_lib/simulstreaming/whisper/simul_whisper/: simul_whisper.py
stt/: Dockerfile  requirements.txt
stt/app/: __init__.py  server.py
tests/: conftest.py
tests/fixtures/: make_fixtures.py
tests/smoke/: conftest.py  test_e2e_text_turn.py  test_llm_server.py  test_stt_known_wav.py  test_tts_synth.py  test_wakeword.py
tests/unit/: test_agent_tool_roundtrip.py  test_history_window_and_idle_wipe.py  test_hybrid_chunker.py  test_memory_store_recall_rank.py  test_tool_timeout_nonblocking.py  test_turn_cancellation.py
tts/: Dockerfile  requirements.txt
tts/app/: __init__.py  server.py
wakeword/: Dockerfile  requirements.txt
wakeword/app/: __init__.py  server.py
