[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voice-stack"
version = "0.0.0"
description = "Local voice assistant stack (wakeword + STT + LLM + TTS)."
requires-python = ">=3.10"
# Runtime dependencies are intentionally NOT listed here; they stay in
# requirments.txt / requirements_whisper.txt so the pinned (e.g. Jetson) torch/numpy
# setup is untouched. This package is installed with `pip install -e .` purely to put
# the repo root on sys.path, making `config` and `modules` importable from anywhere.

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["modules*"]
